# GoogleTest-With-CMake

./: README.md
tests/: CMakeLists.txt
tests/testSampleLib1/: CMakeLists.txt  main.cpp
tests/testSampleLib2/: CMakeLists.txt
